fixed home herosection and spacing issue

--- a/page2/featurestyles.css
+++ b/page2/featurestyles.css
@@ -397,6 +397,18 @@ body {
 
 /* Feature */
 
+.feature-sec{
+    margin-top: -120px;
+}
+
+@media(max-width:995px){
+
+    .feature-sec{
+    margin-top: -350px;
+    }
+
+}
+
 .feature_mainHeading {
     text-align: center;
     font-size: 340%;
@@ -406,6 +418,7 @@ body {
 .featuresubmainheading {
     font-size: 120%;
     font-weight: bold;
+    display: none;
 }
 
 .features_box {
